Opened 14 years ago
Closed 14 years ago
#7446 closed bug (fixed)
CollapsingLayouter crashes some apps
Reported by: | jonas.kirilla | Owned by: | yourpalal |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Attachments (5)
Change History (11)
by , 14 years ago
Attachment: | DevicesBacktrace added |
---|
by , 14 years ago
Attachment: | DriveSetupBacktrace added |
---|
by , 14 years ago
Attachment: | TouchpadBacktrace added |
---|
by , 14 years ago
Attachment: | FileTypesAddAttribute.png added |
---|
by , 14 years ago
Attachment: | OpenGL.png added |
---|
comment:1 by , 14 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 14 years ago
Status: | assigned → in-progress |
---|
comment:3 by , 14 years ago
I think there's also a related, possible regression in MediaConverter, which doesn't allow resizing horizontally anymore.
comment:4 by , 14 years ago
comment:5 by , 14 years ago
Filetypes fix committed in hrev41662. Not exactly 'soon', from 5 weeks ago...
comment:6 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
MediaConverter fixed in hrev41686. Closing ticket as fixed :)
Note:
See TracTickets
for help on using tickets.
Thanks for finding and reporting these! I did do tests, but I didn't try all the included apps and preflets, I guess I should have! The crashes should be easy enough to debug, but the graphical errors might be a bit trickier. Anyway, I'm on it now.